--- a/Com.LoanApproval.Domain/Com.LoanApproval.Domain.csproj
+++ b/Com.LoanApproval.Domain/Com.LoanApproval.Domain.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.7" />
+    <PackageReference Include="Scrutor" Version="6.1.0" />
   </ItemGroup>
 
 </Project>
